using queue for large images
